--- a/css/style.css
+++ b/css/style.css
@@ -56,13 +56,13 @@ img {
   width: 100vw;
 }
 
-.inv_column,
+.ltr_holder,
 .order_column {
   width: 100vw;
 }
 
 .title,
-.price {
+.text {
   text-align: center;
   font-size: 2vh;
   width: 100%;
@@ -79,8 +79,8 @@ img {
   pointer-events: none;
 }
 
-.product > img,
-.product > .image_line > img {
+.letter > img,
+.letter > .image_line > img {
   max-height: 100%;
   margin: 0 auto;
   justify-self: center;
@@ -92,40 +92,6 @@ img {
   text-align: center;
 }
 
-/* .new_order_section {
-  order: -2;
-  flex: 1 0 50%;
-  flex-wrap: wrap;
-  display: flex;
-  min-height: 15vh;
-  max-height: 15vh;
-  overflow-y: scroll;
-  overscroll-behavior-y: contain;
-  justify-content: left;
-  padding-right: 1vw;
-  padding-left: 1vw;
-  background-color: transparent;
-  border-top: 1vh lightgray solid;
-} */
-
-.pay_section {
-  order: 0;
-  flex: 1 0 30%;
-  flex-wrap: wrap;
-  display: flex;
-  min-height: 12vh;
-  max-height: 12vh;
-  min-width: 100vw;
-  max-width: 100vw;
-  overflow-y: scroll;
-  overscroll-behavior-y: contain;
-  justify-content: left;
-  align-items: center;
-  padding-right: 1vw;
-  padding-left: 1vw;
-  background-color: transparent;
-  border-top: 1vh lightgray solid;
-}
 
 /* .new_order, */
 .button {
@@ -139,31 +105,10 @@ img {
   margin: 0 auto;
 }
 
-.total_section {
-  width: 100vw;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.pay_button {
-  width: 100vw;
-  max-height: 5vh;
-  justify-content: space-evenly;
-  display: flex;
-}
-
 .button {
   width: 30vw;
   padding-right: 2vw;
   height: 5vh;
-}
-
-.dollar {
-  flex: 0 43vw;
-}
-
-.coin {
-  flex: 0 21vw;
 }
 
 .main-container {
@@ -174,39 +119,29 @@ img {
   background-color: rgba(245, 247, 251, 1);
 }
 
-.inv_column {
-  max-height: 45vh;
-  min-height: 45vh;
-}
-
-.order_column {
-  max-height: 30vh;
-  min-height: 30vh;
-}
-
-.pay_section {
-  max-height: 20vh;
-  min-height: 20vh;
+.ltr_holder {
+  max-height: 90vh;
+  min-height: 90vh;
 }
 
 .section_title {
-  
-  font-size: 3vh;
-  max-height: 5vh;
-  min-height: 5vh;
-  line-height: 1.5em;
-  color: #707070;
-  background-color: #dce2ee;
+  font-family: cursive;
+  font-size: 4vh;
+  line-height: 8vh;
+  color: white;
+  background-color: rgb(238, 141, 50);
+  max-height: 8vh;
+  min-height: 8vh;
   padding-left: 2vw;
 }
 
-.inventory_list_section {
+.animal_list_section {
   order: -5;
   /* flex: 0 0 100%; */
   flex-wrap: wrap;
   display: flex;
-  min-height: 40vh;
-  max-height: 40vh;
+  min-height: 84vh;
+  max-height: 84vh;
   overflow-y: scroll;
   overscroll-behavior-y: contain;
   justify-content: flex-start;
@@ -215,120 +150,44 @@ img {
   background-color: rgba(245, 247, 251, 1);
 }
 
-.order_list_section {
-  order: -3;
-  flex: 1 0 100%;
-  flex-wrap: wrap;
-  display: flex;
-  min-height: 25vh;
-  max-height: 25vh;
-  overflow-y: scroll;
-  overscroll-behavior-y: contain;
-  justify-content: left;
-  padding-right: 1vw;
-  padding-left: 1vw;
-  background-color: rgba(245, 247, 251, 1);
-}
-.product{
-	flex: 0 14vh;
-}
 
-.product,
-.coin,
-.dollar {
+.letter{
+	flex: 0 30vw;
   display: flex;
   flex-direction: column;
   border-radius: 20px;
   background-color: #ffffff;
   margin: 0.5vh;
-  max-height: 18vh;
+  max-height: 30vh;
   min-width: 100px;
   justify-content: space-evenly;
   border: 2px solid cornflowerblue;
+  transition: all .07s ease;
 }
 
-#inventory_title {
+
+.playing {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  transform: translate(25vw,25vh); /* Standard syntax */
+  transform: scale(1.9);
+  border-color: #ffc600;
+  box-shadow: 0 0 1rem #ffc600;
+}
+
+#ltr_holder_title {
   order: -6;
   flex: 1 0 100%;
 }
 
-#order_title {
-  order: -4;
-  flex: 1 0 100%;
-}
-
-.total_label {
-  font-size: 3.5vh;
-  /* font-size: 1.4em; */
-  color: #0e0e0e;
-  line-height: 1;
-  padding-left: 3vw;
-  width: 60vw;
-  max-width: 60vw;
-}
-
-.total_amount {
-  font-size: 3.5vh;
-  /* font-size: 1.4em; */
-  color: #0e0e0e;
-  line-height: 1;
-  padding-right: 2vw;
-  width: 35vw;
-  max-width: 35vw;
-}
-
-.pale {
-  filter: saturate(50%);
-}
-
-.inventory_list_section::-webkit-scrollbar,
+.animal_list_section::-webkit-scrollbar,
 .order_list_section::-webkit-scrollbar {
   display: none;
 }
 
 /* Payment section */
 
-.coin,
-.dollar {
-  display: flex;
-  flex-direction: column;
-  border-radius: 20px;
-  background-color: #ffffff;
-  margin: 0.5vw;
-  max-height: 18vh;
-}
-
-.dollar > .image_line {
-  height: 13vh;
-  max-height: 13vh;
-  text-align: center;
-  padding-top: 3px;
-}
-
-.coin > .image_line {
-  height: 12vh;
-  max-height: 12vh;
-  text-align: center;
-  padding-top: 3px;
-}
-
-.coin > .title,
-.dollar > .title {
-  text-align: center;
-  font-size: 2vh;
-  width: 100%;
-  line-height: 2.5vh;
-  margin-top: 0.5vh;
-}
-
-.coin > img,
-.coin > .image_line > img,
-.dollar > img,
-.dollar > .image_line > img {
-  max-height: 100%;
-  margin: 0 auto;
-  justify-self: center;
-}
 
 button.button {
   background-color: #426de2;
@@ -345,64 +204,8 @@ button.refund {
 
 
 /* ================================= 
-ROTATE PHONE MESSAGE
-**********************************/
-.phone {
-  height: 50px;
-  width: 100px;
-  border: 3px solid white;
-  border-radius: 10px;
-  animation: rotate 1.5s ease-in-out infinite alternate;
-  display: none;
-}
-
-.message {
-  color: white;
-  font-size: 1em;
-  margin-top: 40px;
-  display: none;
-}
-
-/* ================================= 
   Media Queries
 ==================================== */
-
-@media (max-height: 541px) and (orientation: landscape) {
-  html,
-  body {
-    background: black;
-    height: 100%;
-    width: 100%;
-  }
-
-  .main-container {
-    display: none;
-  }
-
-  body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  @keyframes rotate {
-    0% {
-      transform: rotate(0deg);
-    }
-    50% {
-      transform: rotate(-90deg);
-    }
-    100% {
-      transform: rotate(-90deg);
-    }
-  }
-
-  .phone,
-  .message {
-    display: block;
-  }
-}
 
 @media (orientation: landscape) {
   body {
@@ -415,56 +218,35 @@ ROTATE PHONE MESSAGE
     width: 100%;
     display: flex;
   }
-  .main-header {
+
+
+  
+.letter {
+  flex: 0 20vw;
+}
+
+  /* .main-header {
     flex-direction: column;
     align-items: center;
     background-color: blanchedalmond;
-  }
+  } */
 
-  .inv_column,
-  .order_column {
+  .ltr_holder {
     max-height: 90vh;
     min-height: 90vh;
-  }
-
-  .inv_column {
-    border-right: 1vw lightgray solid;
     width: 100vw;
   }
   
-  .inventory_list_section {
+  .animal_list_section {
     order: 0;
     flex: initial;
-    min-height: 25vh;
-    max-height: 62vh;
     min-width: 100vw;
     max-width: 100vw;
     background-color: transparent;
   }
 
-  .product {
-    flex: 0 11vw;
-  }
 
-  .order_list_section {
-    order: 0;
-    flex: initial;
-    min-height: 1vh;
-    max-height: 62vh;
-    min-width: 40vw;
-    max-width: 40vw;
-    justify-content: flex-start;
-    background-color: transparent;
-  }
 
-  .pay_section {
-    order: 0;
-    flex: initial;
-    min-height: 25vh;
-    max-height: 25vh;
-    justify-content: flex-start;
-}
- 
   /* .new_order, */
   .button {
     flex: initial;
@@ -478,40 +260,16 @@ ROTATE PHONE MESSAGE
     max-width: 225px;
   }
 
-  .section_title {
-    font-size: 3vw;
-    line-height: 8vh;
-    color: lightgrey;
-    background-color: slategray;
-  }
-
-  .icon-bar a {
+  /* .icon-bar a {
     font-size: 8vh;
-  }
+  } */
 
-  #flex-menu > .flex-order button {
-    font-size: 3vh;
-  }
-
-  .main-header {
+  /* .main-header {
     max-height: 13vh;
     border-bottom: #ccc solid 3vh;
-  }
+  } */
 
-  .dollar {
-    flex: 0 26vw;
-  }
-  .dollar.paidIn {
-    flex: 0 17vw;
-  }
-
-  .coin {
-    flex: 0 12vw;
-  }
-
-  .coin.paidIn {
-    flex: 0 10vw;
-  }
+  
 }
 
 /* modal styles */
@@ -624,6 +382,10 @@ ROTATE PHONE MESSAGE
     font-size: 2vw;
   }
 }
+
+
+
+
 
 .disable {
   pointer-events: none;
